--- a/src/styles/desktop/Home.scss
+++ b/src/styles/desktop/Home.scss
@@ -9,10 +9,16 @@ a, a:hover, a:focus, a:active {
 .bio-intro {
   font-size: clamp(2rem, 5vw, 3rem);
   margin-top: 0;
+  margin-bottom: 1rem;
   line-height: 1.2;
   
   @include tablet-up {
     font-size: clamp(2.5rem, 4vw, 3.5rem);
+    margin-bottom: 1.5rem;
+  }
+  
+  @include desktop-up {
+    margin-bottom: 2rem;
   }
 }
 
@@ -20,12 +26,49 @@ a, a:hover, a:focus, a:active {
   font-size: clamp(1.1rem, 3vw, 1.4rem);
   font-weight: bold;
   line-height: 1.3;
+  margin-bottom: 1.5rem;
+  
+  @include tablet-up {
+    margin-bottom: 2rem;
+  }
+  
+  @include desktop-up {
+    margin-bottom: 2.5rem;
+  }
 }
 
 .bio-text {
   font-size: clamp(1rem, 2.5vw, 1.125rem);
   font-weight: 300;
   line-height: 1.5;
+  margin-bottom: 1.5rem;
+  
+  @include tablet-up {
+    margin-bottom: 2rem;
+  }
+  
+  @include desktop-up {
+    margin-bottom: 2.5rem;
+  }
+  
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.bio-cta {
+  font-weight: bold;
+  font-size: clamp(1.1rem, 2.8vw, 1.25rem);
+  text-align: center;
+  margin-top: 1rem;
+  
+  @include tablet-up {
+    margin-top: 1.5rem;
+  }
+  
+  @include desktop-up {
+    margin-top: 2rem;
+  }
 }
 
 .center-text {
